GNOME Bugzilla – Bug 785999
Windows: Fix AeroSnap on HiDPI
Last modified: 2017-08-18 05:32:45 UTC
Hi, During the fix of HiDPI issues on Windows in commit 1d0fad3, some incorrect assumptions were found for the AeroSnap support for HiDPI that were actually in there to make up for the bug which was fixed in that commit. As a result, we need to get rid of those incorrect assumptions in the HiDPI support code for AeroSnap, so that AeroSnap will work properly on HiDPI displays. I will post a patch shortly to address this issue (apparently, this issue does not exist in GTK+-3.9x). With blessings, thank you!
Created attachment 357200 [details] [review] GDK-Win32: Fix Aerosnap on HiDPI Hi, This is the patch that is used to address this issue. With blessings, thank you!
Review of attachment 357200 [details] [review]: LRN is the owner of this code so I'll let him review it.
What about update_fullup_indicator()? It initializes the "to" rect from gdk_window_get_...(), and then divides *and* multiplies by the scale at the same time (which looks weird to me). You can trigger that function by...actually, i'm not sure how to trigger it. You must be drag-resizing a window that is already in FULLUP state...I don't remember what i intended for this code. Maybe it has something to do with multi-monitor setups... Other than this, the code looks right.
Created attachment 357226 [details] [review] GDK-Win32: Fix Aerosnap on HiDPI (take ii) Hi LRN, Thanks for the notes, indeed I missed that part, which is triggered when I resize the window from its top to the top of the screen. I also re-worked the part where we set the X and Y coordinates of the GdkWindow in the Windows/Win32 backend, so that we do always keep track of the X-Y coordinates in the terms of a GdkWindow, so that the code should be a bit clearer and more consistent. With blessings, thank you!
Hi, Any improvements that I could do for this patch? With blessings, thank you!
Review of attachment 357226 [details] [review]: I'd say - go for it.
Hi LRN, Thanks! I pushed the patch to gtk-3-22 as ebadaaa. With blessings, and cheers!